Adding Angular 7 SPA

--- a/PaymentPlatform/Properties/launchSettings.json
+++ b/PaymentPlatform/Properties/launchSettings.json
@@ -17,7 +17,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PaymentPlatform": {
+    "WebAPI": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/values",
