--- a/PaymentPlatform/appsettings.json
+++ b/PaymentPlatform/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DevConnection": "Server=(local)\\sqlexpress; Database=PaymentDB;Trusted_Connection=True;MultipleActiveResultSets=True;" 
+  } 
 }
